--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -7,6 +7,10 @@ code, pre {
 	font-family: courier new, Courier, monospace;
 }
 
+#ptr, #ptr-app {
+	@include positionFill;
+}
+
 .ptr-light {
 	--base0: #{$gray0};
 	--base1: #{$gray1};
