--- a/src/apps/backOffice/styles/index.scss
+++ b/src/apps/backOffice/styles/index.scss
@@ -14,6 +14,9 @@
 	flex: 0 0 m(2);
 	background: $gray10;
 	color: $gray2;
+	box-shadow: 0 0 15px 0 rgba(0, 0, 0, .7);
+	position: relative;
+	z-index: 20;
 }
 
 .ptr-bo-content {
