--- a/src/view/widgets/WorldWindWidget/WorldWindWidget.css
+++ b/src/view/widgets/WorldWindWidget/WorldWindWidget.css
@@ -22,6 +22,8 @@
 #floater-world-wind-widget .floater-body {
 	padding: .5rem 0 0 0;
 	height: calc(100% - 3rem);
+	overflow-x: hidden;
+	width: 100%;
 }
 #floater-world-wind-widget .checkbox-row {
 	transition: background .3s ease-out;
