--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -828,9 +828,11 @@ body.mode-3d #top-toolbar-3dmap.disabled:not(.world-wind-2d) span {
 	background: url('../images/icons/scenarios.svg') center center no-repeat;
 }
 #top-toolbar .item#top-toolbar-views::before {
-	 content: '\f06e';
+	content: '\f06e';
 }
-
+#top-toolbar .item#top-toolbar-tour::before {
+	content: '\f05a';
+}
 
 /* Sidebar tools */
 #sidebar-tools {
