Tour basic texts

--- a/src/view/tour/style.css
+++ b/src/view/tour/style.css
@@ -33,8 +33,8 @@
 	position: absolute;
 }
 
-.tourbus-leg.force-right {
-	margin-left: 20%;
+.tourbus-leg.left-margin {
+	margin-left: 15%;
 }
 
 .tourbus-leg h2 {
@@ -67,7 +67,7 @@ a.tour-button {
 
 .tourbus-arrow:before,
 .tourbus-arrow:after,
-.tourbus-leg.force-right:before {
+.tourbus-leg.right-arrow:before {
 	border: 0;
 	color: white;
 	font-family: "FontAwesome";
@@ -85,7 +85,7 @@ a.tour-button {
 	margin-left: .5rem;
 }
 .tourbus-arrow-right:before,
-.tourbus-leg.force-right:before {
+.tourbus-leg.right-arrow:before {
 	content: "\f177";
 	margin-right: .5rem;
 }
