--- a/src/apps/backOffice/components/Select/Item.scss
+++ b/src/apps/backOffice/components/Select/Item.scss
@@ -3,12 +3,12 @@
 
 .ptr-item,
 a.ptr-item {
+	height: m(1 + 1/3);
 	display: flex;
-	border-radius: $form-border-radius;
+	border-radius: .25rem;
 	border: 2px solid $bo-accent3;
 	background: $bo-accent-lighter1;
-	margin-bottom: $b1;
-	padding: 0 m(.25);
+	margin-bottom: m(1/3);
 	color: $accent8;
 	position: relative;
 }
@@ -21,38 +21,33 @@ a.ptr-item {
 	color: $accent5;
 }
 
-.ptr-item span,
-.ptr-item .option-id{
-	line-height: $a2;
-}
-
 .ptr-item:hover {
 	border-color: $accent5;
 }
 
 
 .ptr-item .label{
-	display: flex;
-	margin-left: m(.25);
+	padding: m(1/12) .375rem 0;
+	line-height: calc(#{m(1 + 1/3)} - 4px);
 }
 
 .ptr-item .option-id{
-	color: var(--base4);
+	line-height: 1rem;
 	display: inline-block;
-	font-size: m(.5);
-	text-align: center;
-	margin-right: $a1;
-    white-space: nowrap;
-    overflow: hidden;
+    width: 1.75rem;
+	font-size: $a0;
+	color: var(--base4);
 }
 
 .ptr-item .ptr-item-actions-end{
+    padding: 0 0.375rem;
 	flex-grow: 2;
 	display: flex;
 	justify-content: flex-end;
 }
 
 .ptr-item .ptr-item-actions-start{
+	padding: 0 0.375rem;
 	display: flex;
 	justify-content: flex-end;
 }
