--- a/src/apps/backOffice/components/Select/select.scss
+++ b/src/apps/backOffice/components/Select/select.scss
@@ -3,16 +3,16 @@
 
 .ptr-select-container .ptr-select__control {
     display: flex;
-    border-radius: $form-border-radius;
+	border-radius: .25rem;
 	border: 2px dashed $bo-accent3;
 	box-shadow: none;
     background: none;
-    margin-bottom: .875rem;
-    padding: 0 .375rem;
+    margin-bottom: m(1/3);
+	padding: 0 .375rem;
     color: var(--base6);
     position: relative;
-    line-height: $a2;
-    min-height: $a2;
+	height: 2rem;
+    min-height: initial;
 }
 
 .ptr-select-container .ptr-select__control.ptr-select__control--menu-is-focused,
@@ -24,8 +24,7 @@
 }
 
 .ptr-select-container .ptr-select__value-container {
-	padding-top: 0px;
-	padding-bottom: 0px;
+	padding: 0px;
 }
 .ptr-select-container .ptr-select__value-container > div {
 	padding-top: 0px;
@@ -40,8 +39,8 @@
 
 .ptr-select-container .ptr-select__indicator-separator {
 	background-color: var(--base6);
-	margin-bottom: 4px;
-    margin-top: 4px;
+	margin-bottom: m(1/4);
+    margin-top: m(1/4);
 }
 
 .ptr-select-container .ptr-select__dropdown-indicator {
@@ -55,8 +54,10 @@
 	height: $a1;
 }
 
-.ptr-select-container .ptr-select__placeholder {
+.ptr-select-container .ptr-select__value-container .ptr-select__placeholder {
 	color: var(--base6);
+	padding: m(1/12) .375rem 0;
+	line-height: calc(#{m(1 + 1/3)} - 4px);	
 }
 
 .ptr-select-container .ptr-select__menu {
@@ -70,7 +71,7 @@
 }
 .ptr-select-container .ptr-select__menu .ptr-select__option.ptr-select__option {
 	cursor: pointer;
-	padding: 0px 12px;
+	padding: 0px m(2/4);
 }
 .ptr-select-container .ptr-select__menu .ptr-select__option.ptr-select__option--is-focused {
 	background-color: $accent2;
