Secondary logo in intro header

--- a/src/components/common/intro/introHeader/style.css
+++ b/src/components/common/intro/introHeader/style.css
@@ -25,6 +25,12 @@
 	justify-content: flex-end;
 	z-index: 1;
 }
+.ptr-intro-header-secondary-logo {
+	position: absolute;
+	right: 2rem;
+	bottom: 2.5rem;
+	z-index: 1;
+}
 .ptr-intro-header-text {
 	display: flex;
 	flex: 1;
