BO: AppSelect: components start

--- a/src/apps/backOffice/components/TopBar/style.scss
+++ b/src/apps/backOffice/components/TopBar/style.scss
@@ -1,5 +1,9 @@
 @import '../../../../styles/variables';
 
+.ptr-bo-top-bar {
+	display: flex;
+}
+
 .ptr-bo-top-bar-quick-access {
 	height: 100%;
 }
