Fix loading LPIS cases in intro

--- a/src/components/specific/LPISCheck/header/style.css
+++ b/src/components/specific/LPISCheck/header/style.css
@@ -98,6 +98,10 @@
 	margin-left: .3rem;
 }
 
+.ptr-button.header-button.ptr-button-fit{
+	width: auto;	
+}
+
 #lpisCheckHeader .flex {
 	flex: 1 1 auto;
 }
