--- a/src/components/common/Screens/style.scss
+++ b/src/components/common/Screens/style.scss
@@ -14,10 +14,46 @@
 .ptr-screen.open {
 	flex-grow: 1;
 }
+.ptr-screen.focused {
+    outline: none;
+}
 .ptr-screen p {
 	position: absolute;
 	bottom: 0;
 }
+
+/* Overlay */
+.ptr-screen-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: transparent;
+  pointer-events: none;
+  transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
+}
+.ptr-screen.focused .ptr-screen-overlay {
+  outline: none;
+  box-shadow: inset 0 m(1/2) 0 m(-1/6) transparent($bo-accent5, .6);
+}
+
+.ptr-screen.disabled > .ptr-screen-overlay {
+  background: transparent($bo5, .5);
+  pointer-events: all;
+  cursor: pointer;
+}
+
+.ptr-screen.disabled > .ptr-screen-overlay:hover {
+  background: transparent($bo4, .5);
+}
+
+// experimental - todo test performance (compatibility should be ok now)
+.ptr-screen.disabled > .ptr-screen-scroll {
+  filter: blur(1px);
+}
+
+/* Controls */
 .ptr-screen-controls {
 	position: absolute;
 	cursor: pointer;
@@ -29,68 +65,46 @@
 	top: 50%;
 }
 
+/* Scroll */
 .ptr-screen-scroll {
 	overflow-x: hidden;
 	width: 100%;
 	height: 100%;
+  	outline: none;
 }
-
-.ptr-screen-overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	background: transparent;
-	pointer-events: none;
-	transition: background .2s ease-in-out;
+.ptr-screen-content {
+  padding: 0 m(4/3);
 }
-
-.ptr-screen.disabled > .ptr-screen-overlay {
-	background: rgba(120, 120, 120, .5);
-	pointer-events: all;
-	cursor: pointer;
-}
-
-.ptr-screen.disabled > .ptr-screen-overlay:hover {
-	background: rgba(120, 120, 120, .35);
-}
-
-// experimental - todo test performance (compatibility should be ok now)
-.ptr-screen.disabled > .ptr-screen-scroll {
-	filter: blur(1px);
-}
-
 
 .ptr-screen-scroll::-webkit-scrollbar {
-	width: .9375rem;
+  width: .9375rem;
 }
 .ptr-screen-scroll::-webkit-scrollbar-button {
-	height: .9375rem;
-	background: rgba(0,0,0,.17);
+  height: .9375rem;
+  background: rgba(0,0,0,.17);
 }
 .ptr-screen-scroll::-webkit-scrollbar-button:vertical:decrement {
-	/* up */
-	background-image: url(./i/triangle-up.svg);
-	background-size: contain;
+  /* up */
+  background-image: url(./i/triangle-up.svg);
+  background-size: contain;
 }
 .ptr-screen-scroll::-webkit-scrollbar-button:vertical:increment {
-	/* down */
-	background-image: url(./i/triangle-down.svg);
-	background-size: contain;
+  /* down */
+  background-image: url(./i/triangle-down.svg);
+  background-size: contain;
 }
 .ptr-screen-scroll::-webkit-scrollbar-track {
-	background: rgba(0,0,0,.1);
+  background: rgba(0,0,0,.1);
 }
 .ptr-screen-scroll::-webkit-scrollbar-thumb {
-	background: rgba(0,0,0,.15);
+  background: rgba(0,0,0,.15);
 }
 .ptr-screen-scroll::-webkit-scrollbar-thumb:hover, .ptr-screen-scroll::-webkit-scrollbar-button:hover {
-	background: rgba(60,30,0,.2);
+  background: rgba(60,30,0,.2);
 }
 .ptr-screen-scroll::-webkit-scrollbar-thumb:active, .ptr-screen-scroll::-webkit-scrollbar-button:active {
-	background: rgba(40,35,20,.5);
+  background: rgba(40,35,20,.5);
 }
 .ptr-screen-scroll::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(0,0,0,.075);
+  background: rgba(0,0,0,.075);
 }
