--- a/src/components/common/Screens/style.scss
+++ b/src/components/common/Screens/style.scss
@@ -9,7 +9,8 @@
 	position: relative;
 	background: $bo0;
 	transition: width .5s ease-in-out;
-	box-shadow: -5px 0 15px -5px rgba(0, 0, 0, .6)
+	box-shadow: -5px 0 15px -5px rgba(0, 0, 0, .6);
+  	overflow-x: hidden;
 }
 .ptr-screen.open {
 	flex-grow: 1;
@@ -67,6 +68,9 @@
 	width: 100%;
 	height: 100%;
   	outline: none;
+}
+.ptr-screen-scroll > div {
+  height: 100%;
 }
 .ptr-screen-content {
   padding: 0 m(4/3);
