--- a/src/components/common/atoms/Button/style.scss
+++ b/src/components/common/atoms/Button/style.scss
@@ -28,6 +28,7 @@
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
   display: inline-block;
   height: m(1 + 1/3);
+  outline: none;
   padding: 0 m(1/4);
   position: relative;
 
