Colors - changed gray2

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -35,7 +35,7 @@ $b7: 14.515rem;
 $gray0: #fffefc;
 $gray0rgb: 255, 254, 252;
 $gray1: #f0f0ef;
-$gray2: #dcdcda;
+$gray2: #d7d7d5;
 $gray3: #bebdbb;
 $gray4: #9d9c9b;
 $gray5: #81807e;
