Variables adapted to the new color scales

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -34,30 +34,67 @@ $b7: 14.515rem;
 // colours
 $gray0: #fffefc;
 $gray0rgb: 255, 254, 252;
-$gray1: #f0f0ef;
-$gray2: #d7d7d5;
-$gray3: #bebdbb;
-$gray4: #9d9c9b;
-$gray5: #81807e;
-$gray6: #676664;
-$gray7: #4d4c4b;
-$gray8: #353433;
-$gray9: #1f1e1d;
-$gray10: #040300;
-$gray10rgb: 4, 3, 0;
+$gray1: #f4f3f1;
+$gray2: #e8e7e5;
+$gray3: #dad9d8;
+$gray4: #c1c1bf;
+$gray5: #a4a3a2;
+$gray6: #858483;
+$gray7: #6c6b6a;
+$gray8: #5b5a5a;
+$gray9: #484847;
+$gray10: #323231;
+$gray11: #1d1d1c;
+$gray12: #040300;
+$gray12rgb: 4, 3, 0;
+
+$darkmode-gray0: #fffefc;
+$darkmode-gray0rgb: 255, 254, 252;
+$darkmode-gray1: #f4f3f1;
+$darkmode-gray2: #e8e7e5;
+$darkmode-gray3: #dad9d8;
+$darkmode-gray4: #c1c1bf;
+$darkmode-gray5: #9f9e9d;
+$darkmode-gray6: #858483;
+$darkmode-gray7: #676665;
+$darkmode-gray8: #565655;
+$darkmode-gray9: #434343;
+$darkmode-gray10: #2b2b2b;
+$darkmode-gray11: #1d1d1c;
+$darkmode-gray12: #040300;
+$darkmode-gray12rgb: 4, 3, 0;
 
 $accent0: #fffefc;
-$accent1: #eaf6f4;
-$accent2:  #c9e8e5;
-$accent3:  #a2d8d3;
-$accent4:  #75c7c3;
-$accent5:  #2ab2ad;
-$accent5rgb:  42, 178, 173;
-$accent6:  #2a8c88;
-$accent7:  #24615d;
-$accent8:  #1d3f3c;
-$accent9:  #172624;
-$accent10:  #040300;
+$accent1: #eaf5f2;
+$accent2: #d5ece9;
+$accent3: #bae1dd;
+$accent4: #87cdc8;
+$accent5: #37b4af;
+$accent6rgb:  42, 146, 142;
+$accent6: #2a928e;
+$accent7: #287773;
+$accent8: #266460;
+$accent9: #224f4c;
+$accent10: #1c3633;
+$accent11: #141f1d;
+$accent12: #040300;
+
+$darkmode-accent0: #fffefc;
+$darkmode-accent1: #eaf5f2;
+$darkmode-accent2: #d5ece9;
+$darkmode-accent3: #bae1dd;
+$darkmode-accent4: #87cdc8;
+$darkmode-accent5: #2aafaa;
+$darkmode-accent6rgb: 42, 146, 142;
+$darkmode-accent6: #2a928e;
+$darkmode-accent7: #28716d;
+$darkmode-accent8: #255e5b;
+$darkmode-accent9: #214a47;
+$darkmode-accent10: #1a2f2c;
+$darkmode-accent11: #141f1d;
+$darkmode-accent12: #040300;
+
+/* TODO adjust colors for BO */
 
 $bo0: #c7c5c2;
 $bo0rgb: 199, 197, 194;
@@ -71,7 +108,9 @@ $bo7: #3b3a38;
 $bo8: #2a2927;
 $bo9: #191917;
 $bo10: #040300;
-$bo10rgb: 4, 3, 0;
+$bo11: #040300;
+$bo12: #040300;
+$bo12rgb: 4, 3, 0;
 
 $bo-lighter1: #d8d6d4;
 $bo-lighter2: #e3e2e1;
@@ -83,12 +122,14 @@ $bo-accent2:  #8ba6a1;
 $bo-accent3:  #6c9692;
 $bo-accent4:  #4b8682;
 $bo-accent5:  #227773;
-$bo-accent5rgb:  34, 119, 115;
+$bo-accent6rgb:  34, 119, 115;
 $bo-accent6:  #215f5b;
 $bo-accent7:  #1e4844;
 $bo-accent8:  #19322f;
 $bo-accent9:  #131d1b;
 $bo-accent10:  #040300;
+$bo-accent11:  #040300;
+$bo-accent12:  #040300;
 
 $bo-accent-lighter1: #aecbc8;
 $bo-accent-lighter2: #c1d7d5;
