--- a/src/index.css
+++ b/src/index.css
@@ -942,3 +942,27 @@ todo merge with overlay
 .ptr-window-container {
 	height: 100%;
 }
+
+/* == Groupings of Scopes */
+.group {
+	padding-top: 30px;
+	padding-bottom: 5px;
+}
+
+.group-title {
+	font-size: 24px;
+	color: darkgrey;
+	padding-left: 20px;
+}
+
+.dlr .ptr-intro-header-overlay {
+	background-color: rgba(55,55,55,.9);
+}
+
+.tep .ptr-intro-header-overlay {
+	background-color: rgba(153,55,64,.9);
+}
+
+.eow2 .ptr-intro-header-overlay {
+	background-color: rgba(0,0,0,.5);
+}
