Updated color scale for BO

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -94,21 +94,20 @@ $darkmode-accent10: #1a2f2c;
 $darkmode-accent11: #141f1d;
 $darkmode-accent12: #040300;
 
-/* TODO adjust colors for BO */
 
 $bo0: #c7c5c2;
 $bo0rgb: 199, 197, 194;
-$bo1: #b1afad;
-$bo2: #9c9a98;
-$bo3: #878683;
-$bo4: #737270;
-$bo5: #605f5c;
-$bo6: #4d4c4a;
-$bo7: #3b3a38;
-$bo8: #2a2927;
-$bo9: #191917;
-$bo10: #040300;
-$bo11: #040300;
+$bo1: #bebcb9;
+$bo2: #b6b4b1;
+$bo3: #aba9a6;
+$bo4: #989694;
+$bo5: #81807d;
+$bo6: #6a6866;
+$bo7: #565553;
+$bo8: #494846;
+$bo9: #3b3a38;
+$bo10: #2a2927;
+$bo11: #191917;
 $bo12: #040300;
 $bo12rgb: 4, 3, 0;
 
@@ -117,18 +116,18 @@ $bo-lighter2: #e3e2e1;
 $bo-lighter3: #eeeeed;
 
 $bo-accent0: #c7c5c2;
-$bo-accent1: #a9b5b2;
-$bo-accent2:  #8ba6a1;
-$bo-accent3:  #6c9692;
-$bo-accent4:  #4b8682;
-$bo-accent5:  #227773;
-$bo-accent6rgb:  34, 119, 115;
-$bo-accent6:  #215f5b;
-$bo-accent7:  #1e4844;
-$bo-accent8:  #19322f;
-$bo-accent9:  #131d1b;
-$bo-accent10:  #040300;
-$bo-accent11:  #040300;
+$bo-accent1: #b9beba;
+$bo-accent2:  #abb7b3;
+$bo-accent3:  #9aaeaa;
+$bo-accent4:  #7b9d99;
+$bo-accent5:  #528a85;
+$bo-accent6rgb:  34, 116, 112;
+$bo-accent6:  #227470;
+$bo-accent7:  #215e5b;
+$bo-accent8:  #1f504d;
+$bo-accent9:  #1c403d;
+$bo-accent10:  #182d2a;
+$bo-accent11:  #121b19;
 $bo-accent12:  #040300;
 
 $bo-accent-lighter1: #aecbc8;
